// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToggleSwitch component should match snapshot for compact + stableWidthLabel 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    aria-label="AI toggle"
    class="toggle toggle--compact"
    role="switch"
    type="button"
  >
    <div
      class="toggle__content"
    >
      <div
        class="toggle__icon"
      >
        <span
          data-testid="toggle-icon"
        >
          icon
        </span>
      </div>
      <div
        class="toggle__header"
      >
        AI annotations
        <div
          aria-hidden="true"
          class="toggle__header__stable"
        >
          AI Annotations
        </div>
      </div>
      <div
        aria-hidden="true"
        class="toggle__switch"
      >
        <span
          class="slider"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`ToggleSwitch component should render in the OFF state and match snapshot 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    aria-label="AI toggle"
    class="toggle"
    role="switch"
    type="button"
  >
    <div
      class="toggle__content"
    >
      <div
        class="toggle__icon"
      >
        <span
          data-testid="toggle-icon"
        >
          icon
        </span>
      </div>
      <div
        class="toggle__header"
      >
        AI annotations
      </div>
      <div
        aria-hidden="true"
        class="toggle__switch"
      >
        <span
          class="slider"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;
